manifests/0000_26_cloud-controller-manager-operator_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    include.release.openshift.io/single-node-developer: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
  labels:
    openshift.io/run-level: "0"
    openshift.io/cluster-monitoring: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
  name: openshift-cloud-controller-manager-operator
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    include.release.openshift.io/single-node-developer: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
  labels:
    openshift.io/run-level: "0"
    openshift.io/cluster-monitoring: "true"
  name: openshift-cloud-controller-manager
