manifests/0000_26_cloud-controller-manager-operator_10_deployment_tombstone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-cloud-controller-manager
  namespace: openshift-cloud-controller-manager-operator
  annotations:
    capability.openshift.io/name: CloudControllerManager
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/delete: "true"
