manifests/0000_26_cloud-controller-manager-operator_10_networkpolicy-default-deny.yaml
# Default deny all ingress and egress traffic by default in this namespace
# At the moment no other Network Policy should be needed:
# - CCCMO & CCM pods are host-networked Pods, so they are not affected by network policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cloud-controller-manager-operator
  annotations:
    capability.openshift.io/name: CloudControllerManager
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cloud-controller-manager
  annotations:
    capability.openshift.io/name: CloudControllerManager
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
