manifests/0000_26_cloud-controller-manager-operator_19_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ccmo-network-policy
  namespace: openshift-cloud-controller-manager-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            apiserver: 'true'
            prometheus: k8s
  egress:
    - to:
      - podSelector:
          matchLabels:
            apiserver: 'true'
            prometheus: k8s
